<resources>
    <string name="app_name">Scottish Health</string>
    <string name="splash_image">Splash_Image</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="admin_mail">colinjohn563@gmail.com</string>
    <string name="admin_name">Scottish Health</string>
    <string name="mail_title">Job Post Approval</string>
    <string name="mail_body1">A new broadcast</string>
    <string name="mail_body2">is pending for approval</string>
    <string name="pref_resolution_default">-1</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution.</string>
    <string name="pref_fps_default">0</string>
    <string name="pref_startbitrate_key">startbitrate_preference</string>
    <string name="pref_startbitrate_title">Start bitrate setting.</string>
    <string name="pref_startbitrate_dlg">Start bitrate setting.</string>
    <string name="pref_startbitrate_default">Default</string>
    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Video encoder start bitrate.</string>
    <string name="pref_startbitratevalue_dlg">Enter video encoder start bitrate in kbps.(Max is 2000)</string>
    <string name="pref_startbitratevalue_default">1000</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">0</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_initiator_behaviour_key">initiator_as_main_preference</string>
    <string name="pref_initiator_behaviour_title">End conference if initiator hangs up</string>
    <string name="pref_initiator_behaviour_default">true</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable built-in AEC.</string>
    <string name="pref_disable_built_in_aec_dlg">Disable built-in AEC.</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_tracing_key">tracing_preference</string>
    <string name="pref_tracing_title">Debug performance tracing.</string>
    <string name="pref_tracing_dlg">Debug performance tracing.</string>
    <string name="pref_tracing_default" translatable="false">false</string>
    <string name="pref_audiocodec_key">pref_audio_codec</string>
    <string name="pref_audiocodec_title">Default audio codec</string>
    <string name="pref_audiocodec_def">ISAC</string>
    <string name="pref_audiocodec_dlg">Select default audio codec</string>
    <string name="login_icon">login_icon</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have an account?</string>
    <string name="createprofile1_complete_profile">Complete Profile</string>
    <string name="hourly_rate_hint">100 £/hour</string>
    <string name="profile_unselected">profile_unselected</string>
    <string name="home_unselected">home_unselected</string>
    <string name="notification_unselected">notification_unselected</string>
    <string name="title_activity_home_screen_fragment">home_screen_fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_login">Please Login</string>
    <string name="cross_image">Cross Image</string>
    <string name="createProfile_2_description">Hello!\nPlease add your picture or brand logo.</string>
    <string name="setting_diaoge">This App require Camera And Storage Permissions to take your picture, Please Allow it by Tapping on Setting</string>
    <string name="createprofile_welcome">Welcome To Scottish Health!</string>
    <string name="mapicon">mapicon</string>
    <string name="search_string_home">Search for a broadcaster, topic or location</string>
    <string name="startup_partner_wanted">Startup partner wanted</string>
    <string name="share_preview_on">Share preview on</string>
    <string name="warninglivestream">This broadcast will be maximum 30 seconds long</string>
    <string name="warninglivestreamforlong">This broadcast will be maximum 15 Minutes long</string>
    <string name="incoming_call_request">incoming Call request</string>
    <string name="muted">muted</string>
    <string name="type_message">Type message here</string>
    <string name="chat_attachment">Attachment</string>
    <string name="image_name">%1$s.jpg</string>
    <string name="don_t_worry_we_just_need_your_registered_email_address_and_its_done">We just need your registered email address and its done!</string>
    <string name="lt_lt_go_back"><![CDATA[<< Go Back]]></string>
    <string-array name="array_name">
        <item>Recruiter</item>
        <item>OpenForWork</item>
    </string-array>
    <string name="statuses_delivered">Delivered</string>
    <string name="statuses_read">Read</string>
    <string name="statuses_sent">Sent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simx_error">Something Went Wrong in Scottish Health, Would you like to restart Scottish Health?</string>
    <string name="gocoder_licsensekey" translatable="false">GOSK-0E47-010C-EFCD-C8B6-7ABC</string>
    <string name="settings">Settings</string>
    <string name="faq">
Q: What is the idea behind the app?\n
\nA: Scottish Health is a  worldwide video only job centre. If a picture is worth a thousand words a video must be worth a million !\n









\n\nQ: What’s in it for recruiters?
\nA: Recruiters can  easily upload video job adverts in the app and share on social media ( particularly LinkedIn ) . Job advertisers can shortlist and share video applications that are connected to a LinkedIn profile. This reduces the time spent interviewing  on Zoom ,Teams or even in a bricks and mortar office. Applicant Tracking Systems cant screen for attitude !

\n\nQ: What about startups?
\nA: Startups can share their elevator pitch and advertise for co-founders or investors . They can also hire virtual coaches as well as Subject Matter Experts.







\n\nQ: How can users find my videos?
A: Any app user can do a YouTube like video search under job title or using # for key words in Tags.  If you have enabled location they can also find you on the GPS map .

\n\nQ: How can users contact me?
\nA: Anyone can contact you via instant messaging, voice or video calls in the app.




\n\nQ: Can I use the app if I don’t want to share my location in the GPS map ?
\nA: Yes !  Your videos then appear as an icon somewhere on the equator .


\n\nQ: Can I livestream a webinar?
\nA: Yes when you create your pitch choose the livestream icon . All users in the app will be able to watch your broadcast and make comments that appear on the screen of your phone .

\n\nQ: I still have questions
\nA: Please mail cj@hydrogenenterprise.com
</string>
</resources>