<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.mainactivityfragments.LoginFragment">

    <ImageView
        android:id="@+id/iv_app_splash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/login_icon"
        android:src="@drawable/h2pay2"
        app:layout_constraintBottom_toTopOf="@id/gl_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        app:layout_constraintVertical_weight="0.9"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/gl_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_pager"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        />
    <me.relex.circleindicator.CircleIndicator
        android:layout_width="0dp"
        app:ci_drawable="@drawable/default_radius"
        app:ci_drawable_unselected="@drawable/black_radius"
        android:layout_height="0dp"
        android:id="@+id/circle_indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_pager"
        app:layout_constraintBottom_toTopOf="@id/gl_dots"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70"
        />

    <Button
        android:background="@drawable/ripple"
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/gl_dots"
        app:layout_constraintBottom_toTopOf="@id/gl_button"
        app:layout_constraintLeft_toRightOf="@id/gl_start_button"
        app:layout_constraintRight_toLeftOf="@id/gl_end_button"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"
        />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sign_up"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>