<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activities.ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/scroll_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/_5sdp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/cross_image"
            android:src="@drawable/ic_cross_white"
            android:visibility="gone"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/scothealth" />

            <TextView
                android:id="@+id/forgotext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/don_t_worry_we_just_need_your_registered_email_address_and_its_done"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/registered_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:background="@drawable/background_curve"
                    android:hint="Enter your registered email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_13sdp"
                    android:textColor="@color/editTextColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_forgot"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/btn_background_new_color"
                android:gravity="center_vertical|center"
                android:padding="@dimen/_15sdp"
                android:text="Submit"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/lt_lt_go_back"
                android:textColor="@color/black" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>